docs/apache-airflow/1.10.4/_sources/_api/airflow/models/taskreschedule/index.rst.txt
:mod:`airflow.models.taskreschedule`
====================================

.. py:module:: airflow.models.taskreschedule


Module Contents
---------------

.. py:class:: TaskReschedule(task, execution_date, try_number, start_date, end_date, reschedule_date)

   Bases: :class:`airflow.models.base.Base`

   TaskReschedule tracks rescheduled task instances.

   .. attribute:: __tablename__
      :annotation: = task_reschedule

      

   .. attribute:: id
      

      

   .. attribute:: task_id
      

      

   .. attribute:: dag_id
      

      

   .. attribute:: execution_date
      

      

   .. attribute:: try_number
      

      

   .. attribute:: start_date
      

      

   .. attribute:: end_date
      

      

   .. attribute:: duration
      

      

   .. attribute:: reschedule_date
      

      

   .. attribute:: __table_args__
      

      

   
   .. staticmethod:: find_for_task_instance(task_instance, session)

      Returns all task reschedules for the task instance and try number,
      in ascending order.

      :param task_instance: the task instance to find task reschedules for
      :type task_instance: airflow.models.TaskInstance




